--- a/index.html
+++ b/index.html
@@ -35,6 +35,16 @@
             </p>
         </div>
     </nav>
+    <!-- BANNER SECTION START HERE -->
+    <header class=" bg-[linear-gradient(90deg,rgba(1,49,34,1),rgba(0,103,71,1)_50%,rgba(1,50,35,1)_100%)] mt-6 hind-madurai-light">
+        <section class="banner flex flex-col justify-center items-center gap-3 p-5">
+            <img class="w-[92px] h-[92px]" src="./assets/logo-dark.png" alt="">
+            <h1 class="text-[40px] font-semibold text-white">জরুরি সেবা ডিরেক্টরি</h1>
+            <p class="text-[20px] font-semibold text-gray-200">Government Emergency Services at Your Fingertip – A
+                Project by Government of the People’s Republic of
+                Bangladesh</p>
+        </section>
+    </header>
     
     <!-- javaScript -->
      <script src="js/script.js"></script>
