--- a/index.html
+++ b/index.html
@@ -45,7 +45,144 @@
                 Bangladesh</p>
         </section>
     </header>
-    
+    <!-- MAIN SECTION START HERE -->
+     <main class="bg-[#f5fff6]">
+        <section class="parent-container w-11/12 mx-auto flex gap-7 mt-12">
+            <section class="left-side w-9/12 border-2 border-blue-800">
+                <div class="card-container grid grid-cols-3 gap-5">
+                    <div class="card bg-[#ffffff] p-5 rounded-xl text-left shadow-md">
+                        <div class="flex justify-between mb-1">
+                            <img class="w-[32px] h-[32px]" src="./assets/emergency.png" alt="">
+                            <h4><i class="fa-regular fa-heart"></i></h4>
+                        </div>
+                        <h2 class="text-2xl font-semibold mb-1">জাতীয় জরুরি সেবা</h2>
+                        <p class="text-[18px] mb-4">National Emergency</p>
+                        <h2 class="text-[32px] font-bold mb-1">999</h2>
+                        <button class="text-[18px] bg-[#f2f2f2] p-3 rounded-3xl w-[103px]">সার্বজনীন</button>
+                        <div class="btn-parent flex justify-self-start items-center text-base gap-2 mt-6">
+                            <button class="py-3 rounded-xl text-gray-400 bg-[#FFFFFF] border-1 border-gray-500 px-[] w-full"><i class="fa-regular fa-copy copy-btn"></i> Copy</button>
+                            <button class="bg-[#00A63E] py-3 px-[] rounded-xl text-white w-full call-btn"><i class="fa-solid fa-phone"></i> Call</button>
+                        </div>
+                    </div>
+                    <div class="card bg-[#ffffff] p-5 rounded-xl text-left shadow-md">
+                        <div class="flex justify-between mb-1">
+                            <img class="w-[32px] h-[32px]" src="./assets/police.png" alt="">
+                            <h4><i class="fa-regular fa-heart"></i></h4>
+                        </div>
+                        <h2 class="text-2xl font-semibold mb-1">পুলিশ</h2>
+                        <p class="text-[18px] mb-4">Police</p>
+                        <h2 class="text-[32px] font-bold mb-1">999</h2>
+                        <button class="text-[18px] bg-[#f2f2f2] p-3 rounded-3xl w-[103px]">পুলিশ</button>
+                        <div class="btn-parent flex justify-self-start items-center text-base gap-2 mt-6">
+                            <button class="py-3 rounded-xl text-gray-400 bg-[#FFFFFF] border-1 border-gray-500 px-[] w-full"><i class="fa-regular fa-copy copy-btn"></i> Copy</button>
+                            <button class="bg-[#00A63E] py-3 px-[] rounded-xl text-white w-full call-btn"><i class="fa-solid fa-phone"></i> Call</button>
+                        </div>
+                    </div>
+                    <div class="card bg-[#ffffff] p-5 rounded-xl text-left shadow-md">
+                        <div class="flex justify-between mb-1">
+                            <img class="w-[32px] h-[32px]" src="./assets/fire-service.png" alt="">
+                            <h4><i class="fa-regular fa-heart"></i></h4>
+                        </div>
+                        <h2 class="text-2xl font-semibold mb-1">ফায়ার সার্ভিস</h2>
+                        <p class="text-[18px] mb-4">Fire Service</p>
+                        <h2 class="text-[32px] font-bold mb-1">999</h2>
+                        <button class="text-[18px] bg-[#f2f2f2] p-3 rounded-3xl w-[103px]">ফায়ার</button>
+                        <div class="btn-parent flex justify-self-start items-center text-base gap-2 mt-6">
+                            <button class="py-3 rounded-xl text-gray-400 bg-[#FFFFFF] border-1 border-gray-500 px-[] w-full"><i class="fa-regular fa-copy copy-btn"></i> Copy</button>
+                            <button class="bg-[#00A63E] py-3 px-[] rounded-xl text-white w-full call-btn"><i class="fa-solid fa-phone"></i> Call</button>
+                        </div>
+                    </div>
+                    <div class="card bg-[#ffffff] p-5 rounded-xl text-left shadow-md">
+                        <div class="flex justify-between mb-1">
+                            <img class="w-[32px] h-[32px]" src="./assets/ambulance.png" alt="">
+                            <h4><i class="fa-regular fa-heart"></i></h4>
+                        </div>
+                        <h2 class="text-2xl font-semibold mb-1">অ্যাম্বুলেন্স</h2>
+                        <p class="text-[18px] mb-4">Ambulance</p>
+                        <h2 class="text-[32px] font-bold mb-1">1994-999999</h2>
+                        <button class="text-[18px] bg-[#f2f2f2] p-3 rounded-3xl w-[103px]">স্বাস্থ্য</button>
+                        <div class="btn-parent flex justify-self-start items-center text-base gap-2 mt-6">
+                            <button class="py-3 rounded-xl text-gray-400 bg-[#FFFFFF] border-1 border-gray-500 px-[] w-full"><i class="fa-regular fa-copy copy-btn"></i> Copy</button>
+                            <button class="bg-[#00A63E] py-3 px-[] rounded-xl text-white w-full call-btn"><i class="fa-solid fa-phone"></i> Call</button>
+                        </div>
+                    </div>
+                    <div class="card bg-[#ffffff] p-5 rounded-xl text-left shadow-md">
+                        <div class="flex justify-between mb-1">
+                            <img class="w-[32px] h-[32px]" src="./assets/emergency.png" alt="">
+                            <h4><i class="fa-regular fa-heart"></i></h4>
+                        </div>
+                        <h2 class="text-2xl font-semibold mb-1">নারী ও শিশু সহায়তা</h2>
+                        <p class="text-[18px] mb-4">Women & Child Helpline</p>
+                        <h2 class="text-[32px] font-bold mb-1">109</h2>
+                        <button class="text-[18px] bg-[#f2f2f2] p-3 rounded-3xl w-[103px]">সহায়তা</button>
+                        <div class="btn-parent flex justify-self-start items-center text-base gap-2 mt-6">
+                            <button class="py-3 rounded-xl text-gray-400 bg-[#FFFFFF] border-1 border-gray-500 px-[] w-full"><i class="fa-regular fa-copy copy-btn"></i> Copy</button>
+                            <button class="bg-[#00A63E] py-3 px-[] rounded-xl text-white w-full call-btn"><i class="fa-solid fa-phone"></i> Call</button>
+                        </div>
+                    </div>
+                    <div class="card bg-[#ffffff] p-5 rounded-xl text-left shadow-md">
+                        <div class="flex justify-between mb-1">
+                            <img class="w-[32px] h-[32px]" src="./assets/emergency.png" alt="">
+                            <h4><i class="fa-regular fa-heart"></i></h4>
+                        </div>
+                        <h2 class="text-2xl font-semibold mb-1">দুদক</h2>
+                        <p class="text-[18px] mb-4">Anti-Corruption</p>
+                        <h2 class="text-[32px] font-bold mb-1">106</h2>
+                        <button class="text-[18px] bg-[#f2f2f2] p-3 rounded-3xl w-[103px]">সরকারি</button>
+                        <div class="btn-parent flex justify-self-start items-center text-base gap-2 mt-6">
+                            <button class="py-3 rounded-xl text-gray-400 bg-[#FFFFFF] border-1 border-gray-500 px-[] w-full"><i class="fa-regular fa-copy copy-btn"></i> Copy</button>
+                            <button class="bg-[#00A63E] py-3 px-[] rounded-xl text-white w-full call-btn"><i class="fa-solid fa-phone"></i> Call</button>
+                        </div>
+                    </div>
+                    <div class="card bg-[#ffffff] p-5 rounded-xl text-left shadow-md">
+                        <div class="flex justify-between mb-1">
+                            <img class="w-[32px] h-[32px]" src="./assets/emergency.png" alt="">
+                            <h4><i class="fa-regular fa-heart"></i></h4>
+                        </div>
+                        <h2 class="text-2xl font-semibold mb-1">বিদ্যুৎ বিভ্রাট</h2>
+                        <p class="text-[18px] mb-4">Electricity Outage</p>
+                        <h2 class="text-[32px] font-bold mb-1">16216</h2>
+                        <button class="text-[18px] bg-[#f2f2f2] p-3 rounded-3xl w-[103px]">বিদ্যুৎ</button>
+                        <div class="btn-parent flex justify-self-start items-center text-base gap-2 mt-6">
+                            <button class="py-3 rounded-xl text-gray-400 bg-[#FFFFFF] border-1 border-gray-500 px-[] w-full"><i class="fa-regular fa-copy copy-btn"></i> Copy</button>
+                            <button class="bg-[#00A63E] py-3 px-[] rounded-xl text-white w-full call-btn"><i class="fa-solid fa-phone"></i> Call</button>
+                        </div>
+                    </div>
+                    <div class="card bg-[#ffffff] p-5 rounded-xl text-left shadow-md">
+                        <div class="flex justify-between mb-1">
+                            <img class="w-[32px] h-[32px]" src="./assets/brac.png" alt="">
+                            <h4><i class="fa-regular fa-heart"></i></h4>
+                        </div>
+                        <h2 class="text-2xl font-semibold mb-1">ব্র্যাক</h2>
+                        <p class="text-[18px] mb-4">Brac</p>
+                        <h2 class="text-[32px] font-bold mb-1">16445</h2>
+                        <button class="text-[18px] bg-[#f2f2f2] p-3 rounded-3xl w-[103px]">এনজিও</button>
+                        <div class="btn-parent flex justify-self-start items-center text-base gap-2 mt-6">
+                            <button class="py-3 rounded-xl text-gray-400 bg-[#FFFFFF] border-1 border-gray-500 px-[] w-full"><i class="fa-regular fa-copy copy-btn"></i> Copy</button>
+                            <button class="bg-[#00A63E] py-3 px-[] rounded-xl text-white w-full call-btn"><i class="fa-solid fa-phone"></i> Call</button>
+                        </div>
+                    </div>
+                    <div class="card bg-[#ffffff] p-5 rounded-xl text-left shadow-md">
+                        <div class="flex justify-between mb-1">
+                            <img class="w-[32px] h-[32px]" src="./assets/Bangladesh-Railway.png" alt="">
+                            <h4><i class="fa-regular fa-heart"></i></h4>
+                        </div>
+                        <h2 class="text-2xl font-semibold mb-1">বাংলাদেশ রেলওয়ে</h2>
+                        <p class="text-[18px] mb-4">Bangladesh Railway</p>
+                        <h2 class="text-[32px] font-bold mb-1">163</h2>
+                        <button class="text-[18px] bg-[#f2f2f2] p-3 rounded-3xl w-[103px]">পরিবহন</button>
+                        <div class="btn-parent flex justify-self-start items-center text-base gap-2 mt-6">
+                            <button class="py-3 rounded-xl text-gray-400 bg-[#FFFFFF] border-1 border-gray-500 px-[] w-full"><i class="fa-regular fa-copy copy-btn"></i> Copy</button>
+                            <button class="bg-[#00A63E] py-3 px-[] rounded-xl text-white w-full call-btn"><i class="fa-solid fa-phone"></i> Call</button>
+                        </div>
+                    </div>
+                </div>
+        </section>
+        <aside class="right-side w-3/12 h-[400px] border-2 border-blue-800">
+
+        </aside>
+        </section>
+     </main>
     <!-- javaScript -->
      <script src="js/script.js"></script>
 </body>
