responsive added for mobile view

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body class="bg-[#f5fff6]">
     <!-- NAV BAR START HERE -->
-    <nav class="max-w-[1920px] mx-auto flex justify-between items-center p-6 bg-[#ffffff] inter-font">
+    <nav class="nav-bar max-w-[1920px] mx-auto flex justify-between items-center p-6 bg-[#ffffff] inter-font">
         <div class="nav-left-side flex justify-center items-center gap-[10px] ml-[60px]">
             <img class="w-[50px] h-[50px]" src="./assets/logo.png" alt="">
             <h3 class="text-2xl text-[#006747] font-bold">Emergency<br /> Services</h3>
@@ -37,8 +37,8 @@
     <header class=" bg-[linear-gradient(90deg,rgba(1,49,34,1),rgba(0,103,71,1)_50%,rgba(1,50,35,1)_100%)]  hind-madurai-light">
         <section class="banner flex flex-col justify-center items-center gap-3 p-5">
             <img class="w-[92px] h-[92px]" src="./assets/logo-dark.png" alt="">
-            <h1 class="text-[40px] font-semibold text-white">জরুরি সেবা ডিরেক্টরি</h1>
-            <p class="text-[20px] font-semibold text-gray-200">Government Emergency Services at Your Fingertip – A
+            <h1 class="lg:text-[40px] md:text-3xl font-semibold text-white">জরুরি সেবা ডিরেক্টরি</h1>
+            <p class="lg:text-[20px] md:text-base md:text-center font-semibold text-gray-200">Government Emergency Services at Your Fingertip – A
                 Project by Government of the People’s Republic of
                 Bangladesh</p>
         </section>
@@ -174,7 +174,7 @@
                         </div>
                     </div>
         </section>
-        <aside class="History-section w-3/12 bg-[#ffffff] roboto-font">
+        <aside class="History-section w-3/12 bg-[#ffffff] roboto-font ">
             <div class="flex justify-between items-center p-5">
                 <div class="flex text-xl font-medium gap-2">
                 <span><i class="fa-solid fa-clock"></i></span>
@@ -187,7 +187,6 @@
             </div>
         </aside>
         </section>
-        <h2 id="total">0</h2>
      </main>
     <!-- javaScript -->
      <script src="js/script.js"></script>
